name: scmi
version: 0.1.0.0
author: Emil Melnikov
maintainer: emilmelnikov@gmail.com
build-type: Simple
cabal-version: >=1.10

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Scmi.Interpreter
  build-depends:
    base ==4.6.*

executable "scmi"
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base ==4.6.*,
    scmi ==0.1.*
