name: scmi
version: 0.1.0.0
author: Emil Melnikov
maintainer: emilmelnikov@gmail.com
build-type: Simple
cabal-version: >=1.10

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Scmi.Interpreter
  build-depends:
    base ==4.6.*,
    hashable ==1.1.*,
    mtl ==2.1.*,
    parsec ==3.1.*,
    unordered-containers ==0.2.*

test-suite spec
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    base ==4.6.*,
    hspec ==1.9.*,
    scmi ==0.1.*

executable "scmi"
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base ==4.6.*,
    scmi ==0.1.*
